--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html>
     <head><title>Angular Classifieds</title></head>
 
-    <body ng-app="angularClassifieds" ng-init="message = 'Hello'">
+    <body ng-app="ngClassifieds" ng-controller="classifiedsCtrl">
+        <input type="text" placeholder="Enter name" ng-model="name">
+        <h1>{{ name }}</h1>
 
-        <h1>{{ message }}</h1>
         <script src="node_modules/angular/angular.js"></script>
+        <script src="node_modules/angular-material/angular-material.js"></script>
+        <script src="node_modules/angular-animate/angular-animate.js"></script>
+        <script src="node_modules/angular-aria/angular-aria.js"></script>
         <script src="scripts/app.js"></script>
+        <script src="components/classifieds.ctr.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.5.1/lodash.min.js"></script>
     </body>
 </html>
