--- a/index.html
+++ b/index.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html>
 <html>
-    <head><title>Angular Classifieds</title></head>
+    <head>
+        <title>Angular Classifieds</title>
+        <link rel="stylesheet" href="node_modules/angular-material/angular-material.css" type="text/css">
+        <link rel="stylesheet" href="node_modules/mdi/css/materialdesignicons.min.css" type="text/css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+    </head>
 
     <body ng-app="ngClassifieds" ng-controller="classifiedsCtrl">
-        <input type="text" placeholder="Enter name" ng-model="name">
-        <h1>{{ name }}</h1>
+        
+        <md-toolbar>
+            <div class="md-toolbar-tools">
+                <p><strong>Angular Classifieds</strong></p>
+                <md-button>
+                    <md-icon class="mdi mdi-plus-circle"></md-icon>
+                    New Classified
+                </md-button>
+            </div>
+        </md-toolbar>
+
+        <md-content class="md-padding" layout="row" layout-wrap>
+            <md-card flex="33">
+                <img src="http://via.placeholder.com/350x150" alt="image">
+                <md-card-content>
+                    <div class="classified-info">
+                        <h2 class="md-title">{{ classified.title }}</h2>
+                        <h3>{{ classified.price }}</h3>
+                        <p>{{ classified.description }}</p>
+                    </div>
+                </md-card-content>
+            </md-card>
+        </md-content>
 
         <script src="node_modules/angular/angular.js"></script>
         <script src="node_modules/angular-material/angular-material.js"></script>
