--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <script src="node_modules/angular-aria/angular-aria.js"></script>
         <script src="scripts/app.js"></script>
         <script src="components/classifieds.ctr.js"></script>
+        <script src="components/classifieds.fac.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.5.1/lodash.min.js"></script>
     </body>
 </html>
