--- a/index.html
+++ b/index.html
@@ -28,23 +28,25 @@
                 <form>
                     <md-input-container>
                         <label for="title" >Title</label>
-                        <input type="text" id="title" md-autofocus>
+                        <input type="text" id="title" md-autofocus md-model="classified.title">
                     </md-input-container>
                     <md-input-container>
                         <label for="price" >Price</label>
-                        <input type="text" id="price">
+                        <input type="text" id="price" md-model="classified.price">
                     </md-input-container>
                     <md-input-container>
                         <label for="description" >Description</label>
-                        <input type="text" id="description">
+                        <input type="text" id="description" md-model="classified.description">
                     </md-input-container>
                     <md-input-container>
                         <label for="image" >Image Link</label>
-                        <input type="text" id="image">
+                        <input type="text" id="image" md-model="classified.image">
                     </md-input-container>
-                    <md-button class="md-primary">Save</md-button>
+                    <md-button class="md-primary" ng-click="saveClassified(classified)">Save</md-button>
                     <md-button class="md-primary">Save Edit</md-button>
                     <md-button class="md-warn" ng-click="closeSidebar()">Cancel</md-button>
+
+                    <pre>{{ classified | json }}</pre>
                 </form>
             </md-content>
         </md-sidenav>
