--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
                 <form>
                     <md-input-container>
                         <label for="title" >Title</label>
-                        <input type="text" id="title" md-autofocus md-model="classified.title">
+                        <input type="text" id="title" md-autofocus ng-model="classified.title">
                     </md-input-container>
                     <md-input-container>
                         <label for="price" >Price</label>
-                        <input type="text" id="price" md-model="classified.price">
+                        <input type="text" id="price" ng-model="classified.price">
                     </md-input-container>
                     <md-input-container>
                         <label for="description" >Description</label>
-                        <input type="text" id="description" md-model="classified.description">
+                        <input type="text" id="description" ng-model="classified.description">
                     </md-input-container>
                     <md-input-container>
                         <label for="image" >Image Link</label>
-                        <input type="text" id="image" md-model="classified.image">
+                        <input type="text" id="image" ng-model="classified.image">
                     </md-input-container>
                     <md-button class="md-primary" ng-click="saveClassified(classified)">Save</md-button>
                     <md-button class="md-primary">Save Edit</md-button>
