--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                         <label for="image" >Image Link</label>
                         <input type="text" id="image" ng-model="classified.image">
                     </md-input-container>
-                    <md-button class="md-primary" ng-click="saveClassified(classified)">Save</md-button>
-                    <md-button class="md-primary">Save Edit</md-button>
+                    <md-button ng-if="!editing" class="md-primary" ng-click="saveClassified(classified)">Save</md-button>
+                    <md-button ng-if="editing" class="md-primary" ng-click="saveEdit()">Save Edit</md-button>
                     <md-button class="md-warn" ng-click="closeSidebar()">Cancel</md-button>
 
                     <pre>{{ classified | json }}</pre>
@@ -78,7 +78,7 @@
                     <div class="classified-admin" ng-if="showAdmin">
                         <h3>Admin</h3>
                          <div layout="row">
-                            <md-button class="md-primary">Edit</md-button>
+                            <md-button ng-click="editClassified(classified)" class="md-primary">Edit</md-button>
                             <md-button class="md-warn">Delete</md-button>
                          </div>
                     </div>
