--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <h3>Admin</h3>
                          <div layout="row">
                             <md-button ng-click="editClassified(classified)" class="md-primary">Edit</md-button>
-                            <md-button class="md-warn">Delete</md-button>
+                            <md-button class="md-warn" ng-click="deleteClassified($event, classified)">Delete</md-button>
                          </div>
                     </div>
 
