--- a/index.html
+++ b/index.html
@@ -1,126 +1,30 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Angular Classifieds</title>
-        <link rel="stylesheet" href="node_modules/angular-material/angular-material.css" type="text/css">
-        <link rel="stylesheet" href="node_modules/mdi/css/materialdesignicons.min.css" type="text/css">
-        <link rel="stylesheet" type="text/css" href="css/style.css">
-    </head>
+  <head>
+    <title>Classifieds</title>
+    <link rel="stylesheet" href="node_modules/angular-material/angular-material.css">
+    <link href="node_modules/mdi/css/materialdesignicons.min.css" media="all" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/style.css">
 
-    <body ng-app="ngClassifieds" ng-controller="classifiedsCtrl">
-        
-        <md-toolbar>
-            <div class="md-toolbar-tools">
-                <p><strong>Angular Classifieds</strong></p>
-                <md-button ng-click="openSidebar()">
-                    <md-icon class="mdi mdi-plus-circle"></md-icon>
-                    New Classified
-                </md-button>
-                <md-button ng-click="showFilters = true">
-                    <md-icon class="mdi mdi-magnify"></md-icon>
-                    Filters
-                </md-button>
-            </div>
-        </md-toolbar>
+  <!-- Setting the right viewport -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-        <div class="filters" layout="row" layout-align="center center" ng-show="showFilters">
-            <md-input-container>
-                <label>Enter Search Term</label>
-                <input type="text" ng-model="classifiedsFilter">
-            </md-input-container>
+  </head>
+  <body ng-app="ngClassifieds">
 
-            <md-input-container>
-                <label>Category</label>
-                <md-select ng-model="category">
-                    <md-option ng-repeat="category in categories" value="{{ category }}">  
-                        {{ category }}
-                    </md-option>
-                </md-select>
-            </md-input-container>
+    <div ui-view></div>
+    
+    <script src="node_modules/angular/angular.js"></script>
+    <script src="node_modules/angular-material/angular-material.js"></script>
+    <script src="node_modules/angular-animate/angular-animate.js"></script>
+    <script src="node_modules/angular-aria/angular-aria.js"></script>
+    <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.5.1/lodash.min.js"></script>
+    <script src="scripts/app.js"></script>
+    <script src="components/classifieds/classifieds.ctr.js"></script>
+    <script src="components/classifieds/classifieds.fac.js"></script>
+    <script src="components/classifieds/new/classifieds.new.ctr.js"></script>
+    <script src="components/classifieds/edit/classifieds.edit.ctr.js"></script>
 
-            <div layout="row">
-                <md-button class="md-warn" ng-click="classifiedsFilter =''; category = '';">Clear</md-button>
-            </div>
-        </div>
-
-        <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left">
-            <md-toolbar>
-                <h1 class="md-toolbar-tools">Add a Classified</h1>
-            </md-toolbar>
-
-            <md-content layout-padding>
-                <form>
-                    <md-input-container>
-                        <label for="title" >Title</label>
-                        <input type="text" id="title" md-autofocus ng-model="classified.title">
-                    </md-input-container>
-                    <md-input-container>
-                        <label for="price" >Price</label>
-                        <input type="text" id="price" ng-model="classified.price">
-                    </md-input-container>
-                    <md-input-container>
-                        <label for="description" >Description</label>
-                        <input type="text" id="description" ng-model="classified.description">
-                    </md-input-container>
-                    <md-input-container>
-                        <label for="image" >Image Link</label>
-                        <input type="text" id="image" ng-model="classified.image">
-                    </md-input-container>
-                    <md-button ng-if="!editing" class="md-primary" ng-click="saveClassified(classified)">Save</md-button>
-                    <md-button ng-if="editing" class="md-primary" ng-click="saveEdit()">Save Edit</md-button>
-                    <md-button class="md-warn" ng-click="closeSidebar()">Cancel</md-button>
-
-                    <pre>{{ classified | json }}</pre>
-                </form>
-            </md-content>
-        </md-sidenav>
-
-        <md-content class="md-padding" layout="row" layout-wrap>
-            <md-card ng-repeat="classified in classifieds | filter: classifiedsFilter | filter: category"
-                flex="30"
-                class="classified">
-                <img src="{{ classified.image }}" alt="image">
-                <md-card-content>
-                    <div class="classified-info" ng-show="!showContact">
-                        <h2 class="md-title">{{ classified.title }}</h2>
-                        <h3>{{ classified.posted | date }}</h3>
-                        <h3>{{ classified.price | currency }}</h3>
-                        <p>{{ classified.description }}</p>
-                    </div>
-
-                    <div class="classified-contact" ng-show="showContact">
-                        <p><md-icon class="mdi mdi-account"></md-icon> {{ classified.contact.name }}</p>
-                        <p><md-icon class="mdi mdi-phone"></md-icon> {{ classified.contact.phone }}</p>
-                        <p><md-icon class="mdi mdi-email"></md-icon> {{ classified.contact.email }}</p>
-                    </div>
-
-                    <div layout="row">
-                        <md-button ng-click="showContact = true" ng-show="!showContact">Contact</md-button>
-                        <md-button ng-click="showContact = false" ng-show="showContact">Details</md-button>
-                        <md-button ng-click="showAdmin = true" ng-show="!showAdmin">Admin</md-button>
-                        <md-button ng-click="showAdmin = false" ng-show="showAdmin">Close</md-button>
-                    </div>
-
-                    <div class="classified-admin" ng-if="showAdmin">
-                        <h3>Admin</h3>
-                         <div layout="row">
-                            <md-button ng-click="editClassified(classified)" class="md-primary">Edit</md-button>
-                            <md-button class="md-warn" ng-click="deleteClassified($event, classified)">Delete</md-button>
-                         </div>
-                    </div>
-
-                </md-card-content>
-            </md-card>
-        </md-content>
-
-        <script src="node_modules/angular/angular.js"></script>
-        <script src="node_modules/angular-material/angular-material.js"></script>
-        <script src="node_modules/angular-animate/angular-animate.js"></script>
-        <script src="node_modules/angular-aria/angular-aria.js"></script>
-        <script src="scripts/app.js"></script>
-        <script src="components/classifieds.ctr.js"></script>
-        <script src="components/classifieds.fac.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.5.1/lodash.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
-    </body>
+  </body>
 </html>
